tests/samples/import-same-path/template.blate
// error: import same path
{@import './template.blate' context}
